--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,25 +1,32 @@
-<h2>Sign up</h2>
-
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+<%= simple_form_for(resource, html: { class: 'login-form'}, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <div class="text-center">
+    <%= f.error_notification %>
+  </div>
 
   <div class="form-inputs">
     <%= f.input :email,
                 required: true,
                 autofocus: true,
+                label: false,
+                placeholder: 'E-mail',
                 input_html: { autocomplete: "email" }%>
     <%= f.input :password,
                 required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                label: false,
+                placeholder: "senha no mínimo de #{@minimum_password_length} caracteres",
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :password_confirmation,
                 required: true,
+                label: false,
+                placeholder: 'Confirmar senha',
                 input_html: { autocomplete: "new-password" } %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
+  <%= render 'devise/shared/button_submit', f: f, text: 'Cadastrar' %>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div class="form-group d-md-flex">
+  <div class="w-100 text-md-right">
+    <%= render "devise/shared/links" %>
+  </div>
+</div>
