Instalando o layout da loja

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+    <!-- Navigation-->
+    <%= render 'layouts/store/nav' %>
     <%= yield %>
+    <%= render 'layouts/store/footer' %>
   </body>
 </html>
