--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -17,7 +17,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-6 text-center mb-5">
-            <h2 class="heading-section">Ecommerce Showzim</h2>
+            <h2 class="heading-section"><%= link_to "Ecommerce Showzim", root_path %></h2>
           </div>
         </div>
 
@@ -33,7 +33,6 @@
             </div>
           </div>
         </div>
-
       </div>
     </section>
   </body>
