Restringindo acesso do admin

--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -104,6 +104,10 @@
         <span>Tables</span></a>
   </li>
 
+  <li class="nav-item">
+    <%= link_to "Sair", destroy_user_session_path, method: :delete, class: "nav-link"  %>
+  </li>
+
   <!-- Divider -->
   <hr class="sidebar-divider d-none d-md-block">
 
