--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<h1 class="h3 mb-4 text-gray-800">Categories</h1>
+<h1 class="h3 mb-4 text-gray-800">Categoria</h1>
 
 <div class="row">
   <div class="col-lg-12">
