--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -26,7 +26,17 @@
 	</li>
 
 	<li class="nav-item">
-		<%= link_to "Sair" , destroy_user_session_path, method: :delete, class: "nav-link" %>
+		<a class="nav-link collapsed" href="<%= admin_products_path %>">
+			<i class="fas fa-puzzle-piece"></i>
+			<span>Produtos</span>
+		</a>
+	</li>
+
+	<li class="nav-item">
+		<a class="nav-link collapsed" data-method="delete" href="<%= destroy_user_session_path %>">
+			<i class="fas fa-arrow-alt-circle-left"></i>
+			<span>Sair</span>
+		</a>
 	</li>
 
 	<hr class="sidebar-divider d-none d-md-block">
