--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -20,7 +20,7 @@
                   <td>
                     <%= link_to "Detalhes", admin_category_path(category), class: 'btn btn-dark' %>
                     <%= link_to "Editar", edit_admin_category_path(category), class: 'btn btn-warning' %>
-                    <%= button_to "Excluir", admin_category_path(category), method: :delete, class: 'btn btn-danger', data: {turbo: false} %>
+                    <%= link_to "Excluir", admin_category_path(category), method: :delete, class: 'btn btn-danger', data: {turbo_method: :delete, turbo_confirm: 'Deseja realmente exlcuir?'} %>
                   </td>
               </tr>
             <% end %>
