--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -19,7 +19,7 @@
                   <td><%= category.position %></td>
                   <td>
                     <%= link_to "Detalhes", admin_category_path(category), class: 'btn btn-dark' %>
-                    <%= link_to "Editar", edit_admin_category_path(category), class: 'btn btn-warning' %>
+                    <%= link_to "Editar", edit_admin_category_path(category), data: { controller: 'admin-modal' }, class: 'btn btn-warning' %>
                     <%= link_to "Excluir", admin_category_path(category), method: :delete, class: 'btn btn-danger', data: {turbo_method: :delete, turbo_confirm: 'Deseja realmente exlcuir?'} %>
                   </td>
               </tr>
@@ -27,7 +27,7 @@
           </tbody>
         </table>
 
-        <%= link_to "Nova categoria", new_admin_category_path, class: 'btn btn-primary' %>
+        <%= link_to "Nova categoria", new_admin_category_path, data: { controller: 'admin-modal' }, class: 'btn btn-primary' %>
       </div>
     </div>
   </div>
