--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1,2 +1,11 @@
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons';
+
+.menu-item-profile {
+  text-decoration: none;
+  font-weight: 600;
+}
+
+.menu-item-profile li:hover {
+  background-color: #e4e4e4;
+}
