Add avatar image for user

--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -19,8 +19,9 @@
           <div class="card-body">
             <%= render 'layouts/shared/flash' if flash.present? %>
             <h2><%= current_user.name %></h2>
-            <%= image_tag "profile", width: 120, class: 'mb-4' %>
+            <%= image_tag user_avatar_url(current_user), width: 120, height: 120, class: 'mb-4 rounded-circle' %>
             <%= simple_form_for current_user, url: update_user_settings_path, data: { turbo: false } do |f| %>
+              <%= f.input :avatar, label: false, hint: 'Escolha uma foto para sua conta.', input_html: { class: 'input_image_full' } %>
               <%= f.input :email, readonly: true %>
               <%= f.input :name %>
               <%= f.input :phone, input_html: { class: 'mask-phone' } %>
