--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -3,15 +3,7 @@
     <div class="row">
       <div class="col-3">
         <div class="card">
-          <div class="card-header">
-            Meu Perfil
-          </div>
-
-          <ul class="list-group list-group-flush">
-            <a href="#" class="menu-item-profile"><li class="list-group-item">Alterar senha</li></a>
-            <a href="#" class="menu-item-profile"><li class="list-group-item">Endereços</li></a>
-            <a href="#" class="menu-item-profile"><li class="list-group-item">Produtos favoritos</li></a>
-          </ul>
+          <%= render 'menu' %>
         </div>
       </div>
       <div class="col-9">
