--- a/app/views/settings/_menu.html.erb
+++ b/app/views/settings/_menu.html.erb
@@ -1,6 +1,6 @@
 <ul class="list-group list-group-flush">
   <a href="<%= settings_path %>" class="menu-item-profile"><li class="list-group-item">Meu perfil</li></a>
   <a href="<%= password_settings_path %>" class="menu-item-profile"><li class="list-group-item">Alterar senha</li></a>
-  <a href="#" class="menu-item-profile"><li class="list-group-item">Endereços</li></a>
+  <a href="<%= addresses_path %>" class="menu-item-profile"><li class="list-group-item">Endereços</li></a>
   <a href="#" class="menu-item-profile"><li class="list-group-item">Produtos favoritos</li></a>
 </ul>
